--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
-    "typeorm": "typeorm-ts-node-commonjs -d src/shared/infra/typeorm/data-source.ts",
+    "typeorm": "typeorm-ts-node-commonjs",
     "test": "jest",
     "seed:admin": "ts-node src/shared/infra/typeorm/seed/admin.ts"
   },
