--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "csv-parse": "^5.3.3",
+    "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -19,10 +20,10 @@
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.6.0",
+    "ts-jest": "^29.0.3",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.11",
-    "uuid": "^9.0.0",
-    "ts-jest": "^29.0.3"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
