--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "seed:admin": "ts-node src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
@@ -23,7 +23,8 @@
     "ts-jest": "^29.0.3",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.11",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -31,6 +32,7 @@
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
