--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.3.3",
     "swagger-ui-express": "^4.6.0",
-    "ts-jest": "^29.0.3",
+    "ts-jest": "^29.0.5",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.11",
-    "uuid": "^9.0.0",
-    "supertest": "^6.3.3"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -45,7 +45,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.3.1",
+    "jest": "^29.4.2",
     "prettier": "^2.8.0",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.1",
