--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "seed:admin": "ts-node src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "aws-sdk": "^2.1319.0",
     "bcrypt": "^5.1.0",
     "csv-parse": "^5.3.3",
     "dayjs": "^1.11.7",
@@ -19,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "pg": "^8.8.0",
@@ -35,6 +37,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/mime": "^3.0.1",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.12",
