--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "aws-sdk": "^2.1319.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
     "csv-parse": "^5.3.3",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
